--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -154,7 +154,7 @@
                     <a href="/{{ request.resolver_match.app_name }}/marketing-business" class="nav-link"> Marketing Your {{ verbose_portal_name }} Business </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/businesscreditcourse/home" target="_blank" class="nav-link"> Business Credit Building
+                    <a href="{% url 'businesscreditcourse:home' %}" target="_blank" class="nav-link"> Business Credit Building
                         Course </a>
                 </li>
                 <li class="nav-item">
