--- a/portals/cannabis/templates/index-cannabis.html
+++ b/portals/cannabis/templates/index-cannabis.html
@@ -215,7 +215,7 @@
                     Business Credit Building Course
                 </div>
                 <div class="card-body">
-                    <a href="/businesscreditcourse/home">
+                    <a href="{% url 'businesscreditcourse:home' %}">
                         <img src="https://images.pexels.com/photos/106344/pexels-photo-106344.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
                              width="100%" alt="">
                     </a>
