tradelines and blala

--- a/business/templates/cooperateCredit/revolving.html
+++ b/business/templates/cooperateCredit/revolving.html
@@ -60,8 +60,7 @@
                                     <td>{{ vendor.name }}</td>
                                     <td>{{ vendor.category }}</td>
                                     <td>{{ vendor.report_to }}</td>
-                                    <td><a class="btn btn-primary" href="/revolving-credit-details/{{ vendor.url }}">Click
-                                        Here For More Details</a></td>
+                                    <td>{{ vendor.description }}</td>
                                 </tr>
                             {% endfor %}
                             </tbody>
@@ -70,18 +69,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-
-        </div>
-
-
-        </form>
-        </div>
-        </div>
-        </form>
-        </div>
-        </div>
         </div>
 
     </section>
