--- a/business/templates/creditPrimaryTradeline.html
+++ b/business/templates/creditPrimaryTradeline.html
@@ -56,9 +56,9 @@
                                 <tr>
                                     <td>{{ data.lender_name }}</td>
                                     <td>{{ data.hard_check }}</td>
-                                    <td>{{ description }}</td>
-                                    <td>{{ strategy }}</td>
-                                    <td><a href="{{ data.url }}" target="_blank">
+                                    <td>{{ data.description }}</td>
+                                    <td>{{ data.strategy }}</td>
+                                    <td><a href="{{ data.get_url }}" target="_blank">
                                         <button type="submit" class="btn btn-primary" name="signup"
                                                 value="Click Here For A Better Description">Apply Now
                                         </button>
@@ -70,20 +70,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-        </div>
-        </div>
-
-
-        </div>
-
-
-        </form>
-        </div>
-        </div>
-        </form>
-        </div>
-        </div>
         </div>
 
 
