--- a/business/templates/cooperateCredit/nopg.html
+++ b/business/templates/cooperateCredit/nopg.html
@@ -48,9 +48,9 @@
                             <thead>
                             <tr>
                                 <th>Name</th>
-                                <th>Category</th>
-
-                                <th>Who The Vendor Reports Too</th>
+                                <th>Who The Vendor Reports To</th>
+                                <th>Terms</th>
+                                <th>Estimated Amount</th>
                                 <th>More Details & Application</th>
                             </tr>
                             </thead>
@@ -59,10 +59,10 @@
                             {% for data in nopg_list %}
                                 <tr>
                                     <td>{{ data.name }}</td>
-                                    <td>{{ data.category }}</td>
-                                    <td>{{ data.report_to }}</td>
-                                    <td><a class="btn btn-primary" href="/nopg-detail/{{ data.url }}">Click Here For
-                                        More Details</a></td>
+                                    <td>{{ data.reports_to }}</td>
+                                    <td>{{ data.terms }}</td>
+                                    <td>{{ data.estimated_amount }}</td>
+                                    <td>{{ data.description }}</td>
                                 </tr>
                             {% endfor %}
                             </tbody>
