--- a/business/templates/financingProducts/personalCreditCard.html
+++ b/business/templates/financingProducts/personalCreditCard.html
@@ -63,7 +63,7 @@
                                     <td>{{ cc.credit_data }}</td>
                                     <td>{{ cc.apr }}</td>
                                     <td>{{ cc.misc_info }}</td>
-                                    <td><a href="{{ cc.url }}" target="_blank">
+                                    <td><a href="{{ cc.get_url }}" target="_blank">
                                         <button type="submit" class="btn btn-primary" name="signup" value="Apply Now">
                                             Apply Now
                                         </button>
@@ -76,20 +76,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-        </div>
-        </div>
-
-
-        </div>
-
-
-        </form>
-        </div>
-        </div>
-        </form>
-        </div>
-        </div>
         </div>
 
 
