--- a/getdinerotoday/templates/components/TopBar.html
+++ b/getdinerotoday/templates/components/TopBar.html
@@ -40,32 +40,40 @@
                         </a>
                         <ul class="dropdown-menu top-dropdown">
                             {% if request.user.is_authenticated %}
-                            <li>
-                                <a href="/dashboard" ><i class="icon-bell0"></i>Go To Main Portal</a>
-                            </li>
-                            <li class="dropdown-divider"></li>
+                                <div style="height: 5px"></div>
                                 <li>
-                                    <a href="{% url 'user:myprogress' %}"><i class="icon-bell0"></i>My Dashboard</a>
+                                    <a href="/dashboard"><i class="icon-home"></i>Main Portal</a>
                                 </li>
                                 <li class="dropdown-divider"></li>
                                 <li>
-                                    <a href="{% url 'loanportal:loanapplication' %}"><i class="icon-money"></i>Loan
+                                    <a href="{% url 'user:myprogress' %}"><i class="icon-bell"></i>My Dashboard</a>
+                                </li>
+                                <li class="dropdown-divider"></li>
+                                <li>
+                                    <a href="{% url 'loanportal:loanapplication' %}"><i class="icon-credit-card"></i>Loan
                                         Portal</a>
                                 </li>
                                 <li class="dropdown-divider"></li>
                                 <li>
-                                    <a href="{% url 'business:create_specific_portal' %}">Saved Portals</a>
+                                    <a href="{% url 'business:create_specific_portal' %}"><i class="icon-briefcase"></i>Saved Portals</a>
                                 </li>
                                 <li class="dropdown-divider"></li>
+
+                                {% if on_payment_plan %}
+                                    <li>
+                                        <a href="{% url 'yourplan:yourplan' %}"><i class="icon-list"></i>Payment plan</a>
+                                    </li>
+                                    <li class="dropdown-divider"></li>
+                                {% endif %}
                                 <li>
-                                    <a href="{% url 'user:logout' %}" class="dropdown-item">
-                                        <i class="icon-logout"></i> Logout
-                                    </a>
+                                    <a href="{% url 'user:logout' %}"><i class="icon-logout"></i> Logout</a>
                                 </li>
                             {% else %}
                                 <a class="navbar-link" href="#">Sign up</a>
                                 <a class="navbar-link" href="#">Login</a>
                             {% endif %}
+                                                        <div style="height: 5px"></div>
+
                         </ul>
                     </li>
                 </ul>
