links to main portal

--- a/goals/templates/buildpersonalcredit/base-buildpersonalcredit.html
+++ b/goals/templates/buildpersonalcredit/base-buildpersonalcredit.html
@@ -13,7 +13,7 @@
                 </div>
                 <ul class="metisMenu nav flex-column" id="menu">
                     <li class="nav-item">
-                        <a href="/" class="nav-link"><span class="toggle-none">Go Back To Main Portal</span></a>
+                        <a href="{% url 'homepage' %}" class="nav-link"><span class="toggle-none">Go Back To Main Portal</span></a>
                     </li>
                     <li class="nav-item">
                         <a href="{% url 'goals:buildpersonalcredit' %}" class="nav-link"><span class="toggle-none">Fix & Or Build My Personal Credit</span></a>
