--- a/goals/templates/repairbusinesscredit/base-repairbusinesscredit.html
+++ b/goals/templates/repairbusinesscredit/base-repairbusinesscredit.html
@@ -12,7 +12,7 @@
                   <p class="text-muted mv-0 toggle-none">Welcome</p>
                </div>
                <ul class="metisMenu nav flex-column" id="menu">
-                  <li class="nav-item"><a href="/" class="nav-link">Go Back To Main Portal</a></li>
+                  <li class="nav-item"><a href="{% url 'homepage' %}" class="nav-link">Go Back To Main Portal</a></li>
                    <li class="nav-item"><a href="/goals/repairbusinesscredit" class="nav-link">Business credit repair</a></li>
                    <li class="nav-item"><a href="/goals/repairbusinesscredit_1" class="nav-link">sign up for business credit monitoring</a></li>
                </ul>
