--- a/goals/templates/buildbusinesscredit/base-buildbusinesscredit.html
+++ b/goals/templates/buildbusinesscredit/base-buildbusinesscredit.html
@@ -13,7 +13,7 @@
                 </div>
                 <ul class="metisMenu nav flex-column" id="menu">
                     <li class="nav-item">
-                        <a href="/" class="nav-link"><span class="toggle-none">Go Back To Main Portal</span></a>
+                        <a href="{% url 'homepage' %}" class="nav-link"><span class="toggle-none">Go Back To Main Portal</span></a>
                     </li>
                     <li class="nav-item">
                         <a href="{% url 'goals:buildbusinesscredit' %}" class="nav-link"><span class="toggle-none">Build Business Credit & Access Business Credit That Isn't Personally Gauranteed</span></a>
