--- a/goals/templates/immediatemoney/base-immediatemoney.html
+++ b/goals/templates/immediatemoney/base-immediatemoney.html
@@ -12,7 +12,7 @@
                     <p class="text-muted mv-0 toggle-none">Welcome</p>
                 </div>
                 <ul class="metisMenu nav flex-column" id="menu">
-                    <li class="nav-item"><a href="/" class="nav-link">Go Back To Main Portal</a></li>
+                    <li class="nav-item"><a href="{% url 'homepage' %}" class="nav-link">Go Back To Main Portal</a></li>
                     <li class="nav-item"><a href="{% url 'goals:immediatemoney' %}" class="nav-link">Get Immediate Money For My Business</a></li>
                     <li class="nav-item"><a href="/goals/financing/" class="nav-link">Create My Financing Plan</a></li>
                      <li class="nav-item">
