--- a/goals/templates/makeextramoney/base-makeextramoney.html
+++ b/goals/templates/makeextramoney/base-makeextramoney.html
@@ -12,7 +12,7 @@
                   <p class="text-muted mv-0 toggle-none">Welcome</p>
                </div>
                <ul class="metisMenu nav flex-column" id="menu">
-                  <li class="nav-item"><a href="/" class="nav-link">Go Back To Main Portal</a></li>
+                  <li class="nav-item"><a href="{% url 'homepage' %}" class="nav-link">Go Back To Main Portal</a></li>
                   <li class="nav-item"><a href="{% url 'goals:makeextramoney' %}" class="nav-link">make extra money referring friends</a></li>
                </ul>
             </div>
