--- a/goals/templates/marketingbusiness/base-marketingbusiness.html
+++ b/goals/templates/marketingbusiness/base-marketingbusiness.html
@@ -12,7 +12,7 @@
                     <p class="text-muted mv-0 toggle-none">Welcome</p>
                 </div>
                 <ul class="metisMenu nav flex-column" id="menu">
-                    <li class="nav-item"><a href="/" class="nav-link">Go Back To Main Portal</a></li>
+                    <li class="nav-item"><a href="{% url 'homepage' %}" class="nav-link">Go Back To Main Portal</a></li>
                     <li class="nav-item"><a href="{% url 'goals:marketingbusiness' %}" class="nav-link">marketing Your
                         business
                     </a></li>
