--- a/goals/templates/merchant/base-merchant.html
+++ b/goals/templates/merchant/base-merchant.html
@@ -12,7 +12,7 @@
                     <p class="text-muted mv-0 toggle-none">Welcome</p>
                 </div>
                 <ul class="metisMenu nav flex-column" id="menu">
-                    <li class="nav-item"><a href="/" class="nav-link">Go Back To Main Portal</a></li>
+                    <li class="nav-item"><a href="{% url 'homepage' %}" class="nav-link">Go Back To Main Portal</a></li>
                     <li class="nav-item"><a href="{% url 'goals:merchant' %}" class="nav-link">Merchant Account</a></li>
                 </ul>
             </div>
