--- a/goals/templates/offeringfinanicg/base-offeringfinancing.html
+++ b/goals/templates/offeringfinanicg/base-offeringfinancing.html
@@ -13,7 +13,7 @@
                 </div>
                 <ul class="metisMenu nav flex-column" id="menu">
                     <li class="nav-heading"><span>MAIN</span></li>
-                    <li class="nav-item"><a href="/" class="nav-link">Go Back To Main Portal</a></li>
+                    <li class="nav-item"><a href="{% url 'homepage' %}" class="nav-link">Go Back To Main Portal</a></li>
                     <li class="nav-item"><a href="{% url 'goals:offeringfinancing' %}" class="nav-link">See The
                         Different Ways You Can Offer Financing To Your Customers</a></li>
                 </ul>
